--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "axios": "^1.5.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "cmdk": "^0.2.0",
         "eslint": "8.50.0",
         "eslint-config-next": "13.5.2",
         "lucide-react": "^0.279.0",
