--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@types/node": "20.6.3",
-        "@types/react": "18.2.22",
-        "@types/react-dom": "18.2.7",
+        "@types/node": "^20.8.3",
+        "@types/react": "^18.2.25",
+        "@types/react-dom": "^18.2.11",
         "@types/uuid": "^9.0.5",
         "@uploadthing/react": "^5.6.2",
         "autoprefixer": "10.4.16",
@@ -32,12 +32,12 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
-        "eslint": "8.50.0",
-        "eslint-config-next": "13.5.2",
-        "lucide-react": "^0.279.0",
+        "eslint": "^8.51.0",
+        "eslint-config-next": "^13.5.4",
+        "lucide-react": "^0.284.0",
         "next": "^13.5.4",
         "next-themes": "^0.2.1",
-        "postcss": "8.4.30",
+        "postcss": "^8.4.31",
         "query-string": "^8.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
