--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     },
     "dependencies": {
         "@clerk/nextjs": "^4.25.3",
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
         "@hookform/resolvers": "^3.3.1",
         "@prisma/client": "^5.4.1",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@tanstack/react-query": "^4.36.1",
         "@types/node": "^20.8.3",
         "@types/react": "^18.2.25",
         "@types/react-dom": "^18.2.11",
