--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
+        "date-fns": "^2.30.0",
         "eslint": "^8.51.0",
         "eslint-config-next": "^13.5.4",
         "lucide-react": "^0.284.0",
