--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@emoji-mart/data": "^1.1.2",
         "@emoji-mart/react": "^1.1.1",
         "@hookform/resolvers": "^3.3.1",
+        "@livekit/components-react": "^1.3.0",
+        "@livekit/components-styles": "^1.0.6",
         "@prisma/client": "^5.4.1",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
@@ -39,6 +41,8 @@
         "date-fns": "^2.30.0",
         "eslint": "^8.51.0",
         "eslint-config-next": "^13.5.4",
+        "livekit-client": "^1.13.4",
+        "livekit-server-sdk": "^1.2.6",
         "lucide-react": "^0.284.0",
         "next": "^13.5.4",
         "next-themes": "^0.2.1",
